# sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md
go/: CHANGELOG.md  README.md  client.go  client_test.go  go.mod  internal_json.go  webhook.go  webhook_test.go
js/: CHANGELOG.md  README.md  package.json  tsconfig.json
js/src/: index.ts
js/tests/: index.test.ts
python/: CHANGELOG.md  README.md  pyproject.toml
python/src/lessotp_sdk/: __init__.py
python/tests/: test_client.py
