[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "lessotp-sdk"
version = "0.1.0"
description = "LessOTP Inbound WhatsApp Authentication client SDK for Python."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "LessOTP" }]
keywords = ["lessotp", "whatsapp", "authentication", "verification", "passwordless"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
]

dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://lessotp.com"
Repository = "https://github.com/lessotp/sdk"
Issues = "https://github.com/lessotp/sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lessotp_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
